--- a/{{ cookiecutter.appname }}/requirements.txt
+++ b/{{ cookiecutter.appname }}/requirements.txt
@@ -3,3 +3,6 @@ crispy-bootstrap5==0.7
 Django==4.1.4
 django-crispy-forms==1.14.0
 sqlparse==0.4.3
+Pillow==9.3.0
+gunicorn>=20.0.4
+psycopg2==2.9.5
