prep for production

--- a/{{ cookiecutter.appname }}/.env-example
+++ b/{{ cookiecutter.appname }}/.env-example
@@ -6,3 +6,4 @@ export PG_PW="postgres"
 export SUPER_USER_PASSWORD="django_super_user"
 export SUPER_USER_NAME="admin"
 export SUPER_USER_EMAIL="email@gmail.com"
+export DOMAIN_NAME="test.domain.tld"
